fix(users): return reset password result as json
